--- a/(Hackerrank)_Two_Strings.ipynb
+++ b/(Hackerrank)_Two_Strings.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "(Hackerrank) Two Strings.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN4Z2wAmXIrMSzoelrMGA17",
+      "authorship_tag": "ABX9TyNprSPNTCZbtO/nxmHjcy1X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,7 +117,7 @@
         "It does not matter if we construct the dictionary `{'a':1, 'b':1, 'c':1}` or `{'a':1, 'd':1, 'f':1}`, either way, `a` will show up in the dictionary and we will be able to find a match in the dictionary call. The same applies to the case where two strings have no common substrings.\n",
         "\n",
         "### Time Complexity\n",
-        "$O(n^2)$ due to the use of the two for loops.\n",
+        "$O(n^2)$ due to the use of two for loops.\n",
         "\n",
         "# Code\n"
       ]
